# once-a-day

./: .travis.yml  Cargo.toml  README.md  main.py
src/: cli.rs  cli.yml  main.rs
utils/: __init__.py  data.py  settings.py
